# vrp-solver

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_profiling.py
.github/workflows/: ci.yml
benchmark/: benchmark_1.py
benchmark/sample/: __init__.py  load_instance.py
example/: e00_create_instance.py  e01_create_instance.py  e02_load_benchmark_instance.py  e03_solve_instance.py  e04_solve_instance_with_plan.py  e05_simulation.py  e06_simulation_li_lim.py
routing/: __init__.py
routing/algorithm/: destroy.py  greedy_insertion.pyx  insertion.pxd  insertion.pyx  job.pxd  job.pyx  lns.py  solution.pxd  solution.pyx  task.pxd  task.pyx
routing/entity/: __init__.py  constant.pxd  constant.pyx  delivery.py  delivery_group.py  error.py  instance.py  job.py  plan.py  task.py  utils.py  vehicle.py  vehicle_type.py
routing/online_opt/: __init__.py  policy.py
routing/simulator/: simulator_interface.py
routing/utils/: __init__.py  compute_distance.py  plot_instance.py  projecion.py
test/algorithm/greedy_insertion/: test_best_insertion_with_fixed_pickup.py  test_best_insertion_with_state.py  test_best_insertion_without_state.py  test_capacity_constraint.py
test/algorithm/solution/: test_apply_complete_insertion.py  test_apply_partial_insertion.py  test_compute_arc_time.py  test_drop_penalty_cost.py  test_init_delivery_window.py  (+10 more)
test/entity/: test_instance.py  test_instance_delivery_window_margin.py  test_plan.py
test/fixtures/: instance_two_jobs.py  instance_with_state.py  instance_without_state.py
