[metadata]
name = routing
version = attr: routing.__version__
description = Vehicle Routing Problem solver for dynamic pickup-and-delivery instances
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
url = https://github.com/turing95/vrp-solver

classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Cython
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24

[options.extras_require]
plot =
    matplotlib>=3.8
dev =
    pytest>=8
    Cython>=0.29.36,<4

[options.packages.find]
exclude =
    test
    *test.*
    benchmark
    *benchmark.*
    example
    *example.*
    docs
    *docs.*
